--- a/app/src/main/res/drawable/rounded_box_background.xml
+++ b/app/src/main/res/drawable/rounded_box_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#4a4a4a" />
+    <solid android:color="#101010" />
     <corners android:radius="12dp" />
     <stroke android:width="2dp" android:color="?attr/colorPrimary" />
 </shape>
